# sso-rag

./: .gitignore  .tool-versions  Dockerfile  README.md  init.sql  requirements.txt
.github/workflows/: build-push-deploy.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml
helm/templates/api/: service.yaml
helm/templates/init-job/: configmap.yaml
poc-01/: .tool-versions  Dockerfile.api  api.py  docker-compose.yaml  parser.py
poc-01/helm/: Chart.yaml  values.yaml
poc-01/helm/templates/api/: configmap.yaml  deployment.yaml
poc-01/helm/templates/init-job/: job.yaml
poc-02/: .env.example  Dockerfile  README.md  api.py  main.py  pyproject.toml
terraform/: alb.tf  apigateway.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
ui/: .tool-versions  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package.json  vite.config.ts
ui/src/: App.tsx  types.ts
ui/src/components/: ChatInput.tsx  ChatMessageBubble.tsx
ui/src/hooks/: useChat.ts
