[project]
name = "poc-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.38.0",
    "botocore>=1.38.0",
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "uvicorn[standard]>=0.34.0",
]
